[tool.black]
line-length = 100 # Adjust the line length as you prefer, default is 88
target-version = ['py38', 'py39', 'py310', 'py311'] # set the python versions.
include = '\.pyi?$' # This is a regex for files to include in formatting (default).
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
)/
''' # files to exclude, based on regex.

[project]
name = "botify-ai"
version = "0.1.0"
description = "Botify AI Project"
authors = [
    {name = "mltrev23",email = "trevor.dev23@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
