[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[project]
name = "botify-ai"
version = "0.1.0"
description = "Botify AI Project"
authors = [
    {name = "mltrev23",email = "trevor.dev23@gmail.com"}
]
readme = "README.md"
# Changed the line below from ">=3.12" to ">=3.10,<4.0"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.115.9,<0.116.0)",
    "openai (>=1.65.1,<2.0.0)",
    "langchain (==0.3.19)",
    "langgraph (==0.2.74)",
    "langchain-openai (>=0.3.7,<0.4.0)",
    "langchain-community (>=0.3.18,<0.4.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "agentipy (>=2.0.2,<3.0.0)",
    "tweepy (>=4.15.0,<5.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pre-commit (>=4.1.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
